# bible-study-bot

./: .gitignore  Dockerfile  README.md  build-docker-mcp.sh  build-docker-ui.sh  config.yaml  docker-compose.yaml  docker-compose.yml  nginx.conf  push-docker-2-gcloud.sh  pyproject.toml  requirements.txt  setup_env.sh  setup_local.sh  start-mcp.sh  start-ui.sh  startup.sh  test-drive.sh
data/bible_versions/cuvs/: 001genesis.yaml  002exodus.yaml  003leviticus.yaml  004numbers.yaml  005deuteronomy.yaml  006joshua.yaml  007judges.yaml  008ruth.yaml  009samuel1.yaml  010samuel2.yaml  011kings1.yaml  012kings2.yaml  013chronicles1.yaml  014chronicles2.yaml  015ezra.yaml  016nehemiah.yaml  017esther.yaml  018job.yaml  019psalms.yaml  020proberbs.yaml  020proverbs.yaml  021ecclesiastes.yaml  022songs.yaml  023isaiah.yaml  024jeremiah.yaml  025lamentations.yaml  026ezekiel.yaml  027daniel.yaml  028hosea.yaml  029joel.yaml  030amos.yaml  031obadiah.yaml  032jonah.yaml  033micah.yaml  034nahum.yaml  035habakkuk.yaml  036zephaniah.yaml  037haggai.yaml  038zechariah.yaml  039malachi.yaml  (+27 more)
py/: agent.py  config.py  gui.py  mcp_server.py  tools.py  workflows.py
py/data/: definitions.py  loaders.py  splitters.py  utils.py
py/db/: vector_store.py
py/sub_agents/: generalist.py  planner.py
scripts/: bible_embedding_config.yaml  build-data.py  data_loader.py  embed_bible.ipynb  publish-data.py
scripts/scrapers/: bible_cuvs.ipynb  definitions.py
src/bible_study_bot/data/: definitions.py  loaders.py  preprocesses.py  splitters.py
